--- a/css_final.css
+++ b/css_final.css
@@ -1,112 +1,96 @@
 * {
-    margin: 0px;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-
+  margin: 0px;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
 
 .heading {
-    display: flex;
-    background-color: #232f3e;
-    box-shadow: 0px 1px 2px #232f3e;
-
+  display: flex;
+  background-color: #232f3e;
+  box-shadow: 0px 1px 2px #232f3e;
 }
 h1 {
-    color: coral;
-    font-weight: bold;
-    
-    background: transparent;
-    padding: 7px;
-    
+  color: coral;
+  font-weight: bold;
+
+  background: transparent;
+  padding: 7px;
 }
 
 body {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .outer-wrapper {
-    margin-top: 40px;
-    margin-left: 20px;
-    margin-right: 20px;
-    border: 1px solid black;
-    border-radius: 4px;
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.9);
-    max-width: 90%;
-    max-height: fit-content;
-
-    
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding-bottom: 5%;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.9);
+  max-width: 90%;
+  max-height: fit-content;
 }
 .table-wrapper {
-
-    overflow-y: scroll;
-    overflow-x: scroll;
-    height: fit-content;
-    max-height: fit-content;
-    margin-top: 22px;    
-    margin: 15px;
-    padding-bottom: 20px;  
+  overflow-y: scroll;
+  overflow-x: scroll;
+  height: fit-content;
+  max-height: fit-content;
+  margin-top: 22px;
+  margin: 15px;
+  padding-bottom: 20px;
 }
 
-
 table {
-    
-    min-width: max-content; 
-    border-collapse: separate;
-    border-spacing: 0px;    
-    
+  min-width: max-content;
+  border-collapse: separate;
+  border-spacing: 0px;
 }
 
 .table-filter {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
-table th{
-    position: sticky; 
-    top: 0px;
-    
-    background-color: #133b5c;
-    color: rgb(190, 192, 167);
-    
-    text-align: center;
-    font-weight: normal;
-    font-size: 18px;
-    outline: 0.7px solid black;
-    border: 1.5px solid black;
-    max-height: fit-content;
+table th {
+  position: sticky;
+  top: 0px;
 
+  background-color: #133b5c;
+  color: rgb(190, 192, 167);
 
-} 
+  text-align: center;
+  font-weight: normal;
+  font-size: 18px;
+  outline: 0.7px solid black;
+  border: 1.5px solid black;
+  max-height: fit-content;
+}
 
-
-
-table th, table td {
-    
-    padding: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    
+table th,
+table td {
+  padding: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 table td {
-    text-align: left;
-    
-    font-size: 15px;
-    border: 1px solid rgb(177, 177, 177);
-    padding-left: 20px;
-    max-height: fit-content;
+  text-align: left;
 
-    
+  font-size: 15px;
+  border: 1px solid rgb(177, 177, 177);
+  padding-left: 20px;
+  max-height: fit-content;
 }
 
 #grad {
-    height: 1000px;
-    background-color: grey;/* For browsers that do not support gradients */
-    background-image: radial-gradient(#517cc7, #2e4db5, #1c3783);
-  }
-  #grad1 {
-    max-height: 630px;
+  height: 1000px;
+  background-color: grey; /* For browsers that do not support gradients */
+  background-image: radial-gradient(#517cc7, #2e4db5, #1c3783);
+}
+#grad1 {
+  max-height: 630px;
 
-    background-color: white;/*to make the background white*/
-  }
+  background-color: white; /*to make the background white*/
+}
