--- a/css_final.css
+++ b/css_final.css
@@ -15,7 +15,6 @@
 h1 {
     color: coral;
     font-weight: bold;
-    
     background: transparent;
     padding: 7px;
     
@@ -35,18 +34,16 @@ body {
     box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.9);
     max-width: 90%;
     max-height: fit-content;
-
     
 }
-.table-wrapper {
 
+.table-wrapper {
     overflow-y: scroll;
     overflow-x: scroll;
     height: fit-content;
-    max-height: fit-content;
-    margin-top: 22px;    
+    max-height: fit-content;   
     margin: 15px;
-    padding-bottom: 20px;  
+    padding-bottom: 20px;
 }
 
 
@@ -65,10 +62,8 @@ table {
 table th{
     position: sticky; 
     top: 0px;
-    
     background-color: #133b5c;
     color: rgb(190, 192, 167);
-    
     text-align: center;
     font-weight: normal;
     font-size: 18px;
@@ -91,7 +86,6 @@ table th, table td {
 
 table td {
     text-align: left;
-    
     font-size: 15px;
     border: 1px solid rgb(177, 177, 177);
     padding-left: 20px;
@@ -105,8 +99,9 @@ table td {
     background-color: grey;/* For browsers that do not support gradients */
     background-image: radial-gradient(#517cc7, #2e4db5, #1c3783);
   }
-  #grad1 {
-    max-height: 630px;
 
+#grad1 {
+    height: fit-content;
     background-color: white;/*to make the background white*/
-  }
+    margin-bottom: 5%;
+}
